# wsf-php

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure
src/: Makefile.global  Makefile.objects  config.h  config.h.in  config.nice  config.status  configure
wsf_c/: Makefile.am  Makefile.in  config.h.in  configure
wsf_c/axis2c/: INSTALL  Makefile.in  build.sh  config.h.in  configure
wsf_c/axis2c/axiom/: Makefile.in  build.sh  config.h.in  configure
wsf_c/axis2c/guththila/: Makefile.in  build.sh  config.h  config.status  configure  libtool
wsf_c/axis2c/ides/: Makefile.in
wsf_c/axis2c/include/: Makefile.in
wsf_c/axis2c/neethi/: Makefile.in  config.h.in  configure
wsf_c/axis2c/samples/: Makefile.in  build.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
wsf_c/axis2c/src/: Makefile.in
wsf_c/axis2c/util/: Makefile.in  build.sh  config.h.in  configure
wsf_c/examples/: Makefile.in  config.h  config.h.in  config.status  configure  libtool
wsf_c/examples/flickr/: Makefile.in  flickr
wsf_c/examples/trader/: Makefile.in
wsf_c/rampartc/: INSTALL  Makefile.in  build.sh  config.h.in  configure
wsf_c/rampartc/samples/: Makefile.in  build.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
wsf_c/rampartc/src/: Makefile.in
wsf_c/rampartc/test/: Makefile.in
wsf_c/rampartc/test/c14n/: Makefile.am  Makefile.in
wsf_c/sandesha2c/: INSTALL  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
wsf_c/wsclient/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
(+411 files in other folders)
